# gmsh

./: .gitignore  Unnamed.step  ]  f.py  hh.py  hoge.geo  hoge.py  huga.py  pyproject.toml  some.py  t14.msh  t18.msh  t2.msh  t7.msh  titled.msh  titled.stl  titled1.stl  titled2.stl  titled3.stl
src/fem/: __init__.py  version.py
src/fem/calc/: __init__.py  calc.py  calc_matrix.py  main.py  sample.py  set_edges.py  set_element.py  set_nodes.py
src/fem/field/: __init__.py  edge.py  element.py  model.py  node.py
src/fem/model/: geo.py  get_model.py  sample.py
